<resources>
    <string name="app_name">miggle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_button">개미굴 로그인</string>
    <string name="board_content"></string>
    <string name="test_comment">회사명</string>
    <string name="SplashFragment">SplashFragment</string>
    <string name="HomeTapFragment">HomeTapFragment</string>>
    <string name="NotionFragment">NotionFragment</string>
    <string name="SearchPasswordFragment">SearchPasswordFragment</string>
    <string name="ProfileEditFragment">ProfileEditFragment</string>
    <string name="PreferencesFragment">PreferencesFragment</string>
    <string name="GuidanceFragment">GuidanceFragment</string>
    <string name="DailyReportFragment">DailyReportFragment</string>
    <string name="PostFragment">PostFragment</string>
    <string name="LoginFragment">LoginFragment</string>
    <string name="SearchFragment">SearchFragment</string>
    <string name="SignUpFragment">SignUpFragment</string>
    <string name="LikeStockListFragment">LikeStockListFragment</string>
    <string name="send_to_complete">전송 완료되었습니다.</string>
    <string name="comming_soon">미구현 기능입니다.</string>
    <string name="okComment">변경 완료</string>
    <string name="server_offline">server offline</string>
    <string name="sent_to_email_new_password">해당 이메일로 비밀번호가 전송되었습니다.</string>
    <string name="close">닫기</string>
    <string name="ProfileTapFragment">ProfileTapFragment</string>
    <string name="ValuationTapFragment">ValuationTapFragment</string>
    <string name="kakao_app_key">d777638ad8e4d3afbccc3ee3ec032f63</string>
    <string name="CommunityTapFragment">CommunityTapFragment</string>
    <string name="RankingFragment">RankingFragment</string>
    <integer name="screen_in_time">400</integer>
    <integer name="screen_out_time">400</integer>
    <string name="string_test">증시를 보기에 앞서 대내외 경제 여건을 살펴보면 동반 회복세를 보이던 실물경제와 금융시장이 올해 2분기를 기점으로 차별화됐다. 이에 경기와 자산 간의 괴리 발생에 따른 버블 가능성 경계심이 고조되고 있지만 급격한 조정 가능성은 제한적이라는 조언이 나온다.

하건형 신한금융투자 연구원은 “경기 모멘텀은 정체된 반면 자산가격 상승세는 거침없었던 만큼 경기 침체에 따른 급격한 자산가격 조정에 대한 경계심이 고조되고 있다”면서도 “기업·정부의 레버리지 팽창으로 증시 밸류 부담이 고조됐지만 통화 긴축으로 전환되지 않았기에 유동성 환경은 양호하며 고용과 투자 확대를 통한 실물 경제 개선 여지도 남아있다”고 짚었다.

다만 경기 모멘텀 약화에 따른 투자심리 위축은 여전하다. 증권사들이 지난 8월에 이어 9월에도 횡보장이 지속될 것이라고 입을 모으는 이유다. 이번주 코스피 지수 예상 범위는 NH투자증권이 3100~3230선, 하나금융투자가 3130~3250선을 제시했다.

김대준 한국투자증권 연구원은 “지수가 반등에 나서기 위해선 위축된 투자심리가 회복돼야 하는데 지금 당장 빠른 심리 개선을 기대하긴 어려워 보인다”며 “중국 정부의 규제로 둔화된 중국 경기 정상화와 델타 변이 확산으로 인한 동남아발 공급 불안 해소도 시간이 필요하기 때문”이라고 설명했다.</string>
</resources>